--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kuma indumentaria</title>
 </head>
 <body>
-    
+    <h1>Kuma indumentaria</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt ad distinctio architecto voluptatibus aliquam hic dolore officiis harum eaque, ex nesciunt repudiandae obcaecati praesentium quisquam! Ab illo ea deserunt soluta?</p>
 </body>
 </html>
