--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> <!-- hoja de estilos de css-->
+    <link rel="stylesheet" href="/css/styles.css"> <!-- hoja de estilos de css-->
     <title>Kuma indumentaria</title>
 </head>
 <body>
-    <h1>Kuma indumentaria</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt ad distinctio architecto voluptatibus aliquam hic dolore officiis harum eaque, ex nesciunt repudiandae obcaecati praesentium quisquam! Ab illo ea deserunt soluta?</p>
+    <div class="wrapper">
+        <header class="header">
+           <h1>Header</h1>
+        </header>
+        <nav class="nav">
+            <h1>Navigation Bar</h1>
+        </nav>
+        <article class="main">
+            <h1>Main content</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe amet atque odit cum molestiae commodi ut doloribus veritatis dolor ipsa repudiandae non, vel magni placeat architecto aut temporibus, recusandae magnam.</p>
+        </article>
+        <aside class="aside aside1">
+            <h1>Aside 1</h1>
+        </aside>
+        <footer class="footer">
+            <h1>Footer</h1>
+        </footer>
+    </div>
 </body>
 </html>
