--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="wrapper">
         <header class="header">
            <h1>Header</h1>
+           <img src="img/logokuma.svg" alt="logokuma">
         </header>
         <nav class="nav">
             <h1>Navigation Bar</h1>
