--- a/index.html
+++ b/index.html
@@ -1,30 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css"> <!-- hoja de estilos de css-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- hoja de estilos de css-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <title>Kuma indumentaria</title>
-</head>
-<body>
-    <div class="wrapper">
-        <header class="header">
-           <h1>Header</h1>
-           <img src="img/logokuma.svg" alt="logokuma">
-        </header>
-        <nav class="nav">
-            <h1>Navigation Bar</h1>
-        </nav>
-        <article class="main">
-            <h1>Main content</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe amet atque odit cum molestiae commodi ut doloribus veritatis dolor ipsa repudiandae non, vel magni placeat architecto aut temporibus, recusandae magnam.</p>
-        </article>
-        <aside class="aside aside1">
-            <h1>Aside 1</h1>
-        </aside>
-        <footer class="footer">
-            <h1>Footer</h1>
-        </footer>
+  </head>
+  <body>
+    <div class="banner1">
+      <p>unica condicion de compra: minimo <span>$50000</span></p>
     </div>
-</body>
+    <div class="banner2 container">
+      <div class="datos">
+        <p>1120300005</p>
+        <p>consultas@kuma.com.ar</p>
+      </div>
+      <ul>
+        <li><a href="#">Crear cuenta</a></li>
+        <li><a href="#">iniciar sesion</a></li>
+      </ul>
+    </div>
+    <nav class="navbar container">
+      <div class="logo">
+        <img src="assets/img/kuma-logo.png" alt="logo" />
+      </div>
+
+      <ul class="menu-central">
+        <li ><a class="active" href="#">inicio</a></li>
+        <li><a href="#">productos</a></li>
+        <li><a href="#">contacto</a></li>
+      </ul>
+
+      <div class="buscador">
+        <input
+          class="form-control"
+          type="text"
+          value="Buscar "
+          aria-label="readonly input example"
+          readonly
+        />
+        <a href="#"><img src="assets/img/carrito.png" alt="carrito" /></a>
+      </div>
+    </nav>
+
+    <div id="carouselExample" class="carousel slide container">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/slide1.png" class="d-block w-100" alt="img1" />
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/slide2.png" class="d-block w-100" alt="img2" />
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/slide3.png" class="d-block w-100" alt="img3" />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
