se agrego productos y maquetado

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <ul class="menu-central">
         <li ><a class="active" href="#">inicio</a></li>
-        <li><a href="#">productos</a></li>
+        <li><a href="productos.html">productos</a></li>
         <li><a href="#">contacto</a></li>
       </ul>
 
