--- a/productos.html
+++ b/productos.html
@@ -1,24 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="productos container">
-        <div class="element-1">#1</div>
-        <div class="element-2">#2</div>
-        <div class="element-3">#3</div>
-        <div class="element-4">#4</div>
+<html lang="en" data-bs-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>productos</title>
+  </head>
+  <body>
+    <div class="banner1">
+        <p>unica condicion de compra : minimo <span>$50000</span></p>
+      </div>
+      <div class="banner2 container">
+        <div class="datos">
+          <p>1120300005</p>
+          <p>consultas@kuma.com.ar</p>
+        </div>
+        <ul>
+          <li><a href="#">Crear cuenta</a></li>
+          <li><a href="#">iniciar sesion</a></li>
+        </ul>
+      </div>
 
+    <nav class="navbar container">
+        <div class="logo">
+          <img src="assets/img/kuma-logo.png" alt="logo" />
+        </div>
+  
+        <ul class="menu-central">
+          <li ><a  href="index.html">inicio</a></li>
+          <li><a href="productos.html" class="active">productos</a></li>
+          <li><a href="#">contacto</a></li>
+        </ul>
+  
+        <div class="buscador">
+          <input
+            class="form-control"
+            type="text"
+            value="Buscar "
+            aria-label="readonly input example"
+            readonly
+          />
+          <a href="#"><img src="assets/img/carrito.png" alt="carrito" /></a>
+        </div>
+      </nav>
+
+    <div class="album py-5 bg-body-tertiary">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">  <!-- producto 1 -->
+            <div class="card mx-auto w-100" style="width: 18rem">
+              <img
+                src="./assets/img/prod-1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Campera Onichi</h5>            
+                <a href="#" class="btn btn-primary w-100">
+                  <i class="bi bi-cart4"></i>
+                  Comprar
+                </a>
+              </div>
+            </div>
+          </div> <!-- fin prod1-->
+          <div class="col"> <!--producto 2-->
+            <div class="card mx-auto w-100" style="width: 18rem">
+              <img
+                src="./assets/img/prod-2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Campera Doggis</h5>
+                <a href="#" class="btn btn-primary w-100">
+                  <i class="bi bi-cart4"></i>
+                  Comprar
+                </a>
+              </div>
+            </div>
+          </div> <!-- fin prod2-->
+          <div class="col"> <!-- producto 3-->
+            <div class="card mx-auto w-100" style="width: 18rem">
+              <img
+                src="./assets/img/prod-3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Campera Smile</h5>
+                <a href="#" class="btn btn-primary w-100">
+                  <i class="bi bi-cart4"></i>
+                  Comprar
+                </a>
+              </div>
+            </div>
+          </div> <!-- fin prod3-->
+
+        </div>
+      </div>
     </div>
-
-
-
-
-
-
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
